--- a/project.html
+++ b/project.html
@@ -6,7 +6,6 @@
   <title>프로젝트 상세 - Project.PAW</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
   <!-- ✅ Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -19,12 +18,8 @@
       --line:#eaeaea;
       --bg:#fafafa;
     }
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--ink);
-      font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif
-    }
+    body{margin:0;background:var(--bg);color:var(--ink);
+      font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
     .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
 
     /* Hero */
@@ -57,22 +52,17 @@
     .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
     .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
 
-    .info-card p{margin:6px 0;font-size:1rem;color:var(--sub)}
-
     .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
     .share-buttons button{flex:1;min-width:120px;display:flex;align-items:center;justify-content:center;
       gap:8px;padding:12px 18px;border-radius:12px;font-weight:600;font-size:.95rem;
       cursor:pointer;border:none;transition:.2s}
     .share-buttons button:hover{transform:translateY(-2px)}
-    .share-kakao{background:#FEE500;color:#111}
-    .share-insta{background:#E4405F;color:#fff}
     .share-copy{background:#6b7280;color:#fff}
 
-    .cta-dock{position:fixed;bottom:16px;right:16px;z-index:50;display:flex;flex-direction:column;gap:10px;
+    .cta-dock{position:fixed;bottom:16px;right:16px;z-index:50;display:none;
       filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15))}
-    .cta-dock a{background:var(--accent);color:#fff;padding:12px 18px;border-radius:14px;
+    .cta-dock a{background:#FEE500;color:#111;padding:12px 18px;border-radius:14px;
       font-weight:700;font-size:.95rem;text-align:center;text-decoration:none}
-    .cta-dock a:hover{background:#d56612}
   </style>
 </head>
 <body>
@@ -82,8 +72,8 @@
     <div id="project-detail"><div class="muted">불러오는 중...</div></div>
   </main>
 
-  <div class="cta-dock" id="ctaDock" style="display:none">
-    <a id="ctaBtn" target="_blank">참여하기</a>
+  <div class="cta-dock" id="ctaDock">
+    <a id="ctaBtn" target="_blank">카카오 단톡방 입장하기</a>
   </div>
 
   <div data-include="footer"></div>
@@ -129,7 +119,7 @@
       const cands=candidatesOf(p);
       const urls=await Promise.all(cands.map(toHttpUrl));
       const uniq=[],seen=new Set();
-      for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);}}
+      for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);} }
       return uniq.length?uniq:['img/placeholder.svg'];
     }
 
@@ -180,7 +170,10 @@
                 <span>현재 <strong>${fmt(current)}</strong>원</span>
                 <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
               </div>
-              ${p.registrantKakaoId?`<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn primary">참여하기</a>`:''}
+              ${p.kakaoChatUrl ? `
+                <a href="${p.kakaoChatUrl}" target="_blank" class="btn primary">
+                  🗨️ 카카오 단톡방 입장하기
+                </a>` : ''}
             </div>
           </section>
 
@@ -189,31 +182,32 @@
             <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
           </section>
 
-          <section class="section-card info-card">
-            <h2>프로젝트 정보</h2>
-            <p><strong>구조자 부담금:</strong> ${fmt(p.rescuerContribution)}원</p>
-            <p><strong>승인 상태:</strong> ${p.adminApproved?'승인됨':'대기중'}</p>
-          </section>
-
           <section class="section-card">
             <h2>공유하기</h2>
             <div class="share-buttons">
-              <button class="share-kakao" id="shareKakao"><i class="fa-solid fa-comment"></i> 카카오톡</button>
-              <button class="share-insta" id="shareInsta"><i class="fa-brands fa-instagram"></i> 인스타그램</button>
-              <button class="share-copy" id="shareCopy"><i class="fa-solid fa-link"></i> 링크복사</button>
+              <button class="share-copy" id="shareCopy">🔗 링크 복사</button>
             </div>
+          </section>
+
+          <section class="section-card">
+            <h2>Beta 안내</h2>
+            <p style="line-height:1.6">
+              ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
+              후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 매일 수동으로 모금액/참여자 수를 업데이트합니다.<br/>
+              정식 서비스에서는 PG 결제를 통한 자동화된 투명 시스템이 제공될 예정입니다.
+            </p>
           </section>
         `;
 
-        if(p.registrantKakaoId){
-          $ctaDock.style.display='flex';
-          $ctaBtn.href=`https://open.kakao.com/o/${p.registrantKakaoId}`;
-          $ctaBtn.textContent='참여하기';
+        if(p.kakaoChatUrl){
+          $ctaDock.style.display='block';
+          $ctaBtn.href=p.kakaoChatUrl;
         }
 
-        document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크 복사됨!")));
-        document.getElementById("shareKakao")?.addEventListener("click",()=>window.open("https://sharer.kakao.com/talk/friends/picker/link","_blank"));
-        document.getElementById("shareInsta")?.addEventListener("click",()=>alert("인스타그램은 직접 URL을 복사해 공유해주세요."));
+        document.getElementById("shareCopy")?.addEventListener("click",()=>{
+          navigator.clipboard.writeText(window.location.href)
+            .then(()=>alert("링크가 복사되었습니다."));
+        });
       }catch(e){
         console.error(e);
         $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
