--- a/index.html
+++ b/index.html
@@ -3,54 +3,110 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Project.PAW - 홈</title>
+  <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
   <style>
-    :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fafafa}
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
-    .container{max-width:1280px;margin:0 auto;padding:0 20px}
+    :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fff}
+    html,body{margin:0;background:var(--bg);color:var(--ink);
+      font-family:'SUIT Variable','Pretendard','Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    .container{max-width:1200px;margin:0 auto;padding:0 20px}
     section{padding:64px 0}
-    h1{font-size:2.2rem;font-weight:900;margin-bottom:32px;color:var(--ink)}
-    #q{padding:12px 14px;border:1px solid var(--line);border-radius:12px;font-size:1rem;width:100%;max-width:360px}
 
-    /* ✅ 카드 레이아웃 */
-    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:40px;margin-top:32px}
-    .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;
-      background:#fff;text-decoration:none;color:inherit;transition:.3s;box-shadow:0 4px 10px rgba(0,0,0,0.08)}
-    .card:hover{transform:translateY(-6px);box-shadow:0 14px 28px rgba(0,0,0,0.2)}
+    /* Hero */
+    .hero{text-align:center;padding:160px 20px 70px;background:var(--bg)}
+    .hero h1{margin:0 0 24px;font-size:3.2rem;font-weight:900;line-height:1.3;color:var(--ink);position:relative;display:inline-block}
+    .hero h1::after{content:"";position:absolute;left:0;bottom:-8px;width:100%;height:14px;background:var(--accent);z-index:-1;border-radius:4px}
+    .hashtags{margin-top:24px;font-size:1.05rem;color:var(--sub);font-weight:600;line-height:1.8;display:flex;flex-wrap:wrap;justify-content:center}
+    .hashtags span{display:inline-block;margin:6px 10px;color:var(--accent);font-weight:800}
 
-    .thumb{position:relative;height:260px;overflow:hidden}
-    .thumb img{width:100%;height:100%;object-fit:cover;transition:transform .4s ease}
-    /* ✅ hover 시 이미지 zoom-in */
-    .card:hover .thumb img{transform:scale(1.05)}
+    /* Story Cards */
+    .story-cards{background:var(--bg);padding:60px 0}
+    .card-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:32px}
+    @media(max-width:768px){.card-grid{grid-template-columns:1fr}}
+    .story-card{background:#fff;border:2px solid var(--accent);border-radius:20px;padding:40px 30px;text-align:left;box-shadow:0 6px 14px rgba(0,0,0,.06);display:flex;flex-direction:column}
+    .card-top{display:flex;justify-content:space-between;align-items:center;font-size:1rem;font-weight:700;margin-bottom:16px;color:var(--accent);padding-bottom:12px;border-bottom:1px solid var(--line)}
+    .story-card h2{font-size:1.9rem;font-weight:800;margin:0 0 24px;line-height:1.4;color:var(--ink)}
+    .story-card ul{list-style:none;padding:0;margin:0;display:flex;flex-direction:column;gap:16px}
+    .story-card li{border:2px solid var(--accent);border-radius:14px;padding:14px 18px;font-size:1.05rem;font-weight:600;background:#fff;color:var(--ink)}
+    .story-card li:hover{background:#fafafa}
 
+    /* Projects */
+    .projects h2{margin:0;font-size:2rem;font-weight:900;color:var(--ink)}
+    .projects .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px}
+    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:40px} /* 카드 크기 ↑ */
+    .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;background:#fff;text-decoration:none;color:inherit;transition:.3s;min-height:420px}
+    .card:hover{transform:translateY(-6px);box-shadow:0 12px 24px rgba(0,0,0,0.15)}
+    .thumb{position:relative;height:240px;overflow:hidden}
+    .thumb img{width:100%;height:100%;object-fit:cover}
     .overlay{position:absolute;top:0;left:0;right:0;bottom:0;display:flex;flex-direction:column;justify-content:flex-end;
-      background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:20px}
+      background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:18px}
     .overlay .badge{align-self:flex-start;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto}
-    .overlay h3{font-size:1.4rem;font-weight:800;margin:0}
-    .overlay .summary{margin:4px 0 0;font-size:1rem;opacity:.9}
+    .overlay h3{font-size:1.4rem;font-weight:800;margin:0;line-height:1.4}
+    .overlay .summary{margin:6px 0 0;font-size:1rem;opacity:.9}
     .overlay .hover-text{display:none;text-align:center;font-size:.95rem;font-weight:600}
     .card:hover .overlay .hover-text{display:block}
-
     .card-body{padding:20px;background:#fff}
-    .hearts{color:var(--accent);font-weight:700;margin-bottom:8px;font-size:1rem}
-    /* ✅ 핵심문구 black */
-    .key-message{color:#111;font-weight:600;margin:8px 0;font-size:1rem}
-    .progress{background:#eee;border-radius:6px;overflow:hidden;height:12px;margin:12px 0}
+    .hearts{color:var(--accent);font-weight:700;margin-bottom:8px}
+    .key-message{color:var(--ink);font-weight:600;margin:8px 0} /* 핵심문구 색상 black */
+    .progress{background:#eee;border-radius:8px;overflow:hidden;height:12px;margin:10px 0}
     .progress .bar{background:var(--accent);height:100%}
     .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-top:8px}
     .stats span strong{font-weight:800;color:var(--ink);margin-left:4px}
+    .muted{color:#888}
   </style>
 </head>
 <body>
   <div data-include="header"></div>
-  <main class="container">
-    <h1>진행중인 프로젝트</h1>
-    <input id="q" placeholder="검색"/>
-    <div id="list" class="cards"><div class="muted">불러오는 중...</div></div>
-  </main>
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container">
+      <h1>개인과 개인을 연결하는, 직접 후원의 시작</h1>
+      <div class="hashtags">
+        <span>#유기동물구조</span><span>#직접후원</span><span>#투명모금</span>
+        <span>#유기동물치료비</span><span>#중성화수술</span><span>#입양직후검진/예방</span>
+        <span>#투명한구조활동</span><span>#응급치료지원</span><span>#사지말고입양하세요</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Story Cards -->
+  <section class="story-cards">
+    <div class="container card-grid">
+      <div class="story-card">
+        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
+        <h2>❝ 돈보다 마음이 먼저 ❞</h2>
+        <ul>
+          <li>구조 순간, 망설임을 용기로</li>
+          <li>도움은 본능, 연결은 선택</li>
+          <li>작은 마음이 모여 큰 힘이 됨</li>
+        </ul>
+      </div>
+      <div class="story-card">
+        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
+        <h2>❝ 책임 없는 구조는 없다 ❞</h2>
+        <ul>
+          <li>구조자 30% 직접 부담</li>
+          <li>후원금 100% 전달 (수수료는 PAW 부담)</li>
+          <li>후기 & 영수증 공유로 투명성 보장</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="projects">
+    <div class="container">
+      <div class="header">
+        <h2>진행 중인 프로젝트</h2>
+        <a href="project_list.html" class="btn primary" style="color:#fff;background:var(--accent);padding:10px 16px;border-radius:8px;font-weight:700;text-decoration:none;">모두 보기 →</a>
+      </div>
+      <div id="projects-grid" class="cards"><div class="muted">불러오는 중...</div></div>
+    </div>
+  </section>
+
   <div data-include="footer"></div>
 
   <script type="module">
@@ -60,61 +116,28 @@
     import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
     injectLayout({ active:'home' });
 
-    const $q=document.getElementById('q'); 
-    const $list=document.getElementById('list');
+    const $grid=document.getElementById('projects-grid');
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
 
-    function candidatesOf(p){
-      const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
+    function candidatesOf(p){const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
       ['representativeImageUrl','coverUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
-      ['galleryUrls','images'].forEach(k=>{
-        const arr=p[k];
-        if(Array.isArray(arr))arr.forEach(it=>{
-          if(typeof it==='string')push(it);
-          else if(it&&(it.url||it.downloadUrl||it.path))push(it.url||it.downloadUrl||it.path);
-        });
-      });
-      return out;
-    }
-    async function toHttpUrl(raw){
-      if(!raw)return null;
-      let v=String(raw).trim();
-      if(/^(https?:|data:|blob:)/i.test(v))return v;
-      if(v.startsWith('/'))v=v.slice(1);
-      try{return await getDownloadURL(ref(storage,v));}catch(e){return null;}
-    }
-    async function coverUrlOf(p){
-      for(const c of candidatesOf(p)){
-        const u=await toHttpUrl(c);
-        if(u)return u;
-      }
-      return 'img/placeholder.svg';
-    }
-    function match(p,q){
-      if(!q)return true;
-      const hay=[p.name,p.summary,p.description,p.rescuerName,p.keyMessage]
-        .map(x=>(x||'')+'').join(' ').toLowerCase();
-      return hay.includes(q.toLowerCase());
-    }
+      ['galleryUrls','images'].forEach(k=>{const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{if(typeof it==='string')push(it);else if(it&&(it.url||it.downloadUrl||it.path))push(it.url||it.downloadUrl||it.path);});});
+      return out;}
+    async function toHttpUrl(raw){if(!raw)return null;let v=String(raw).trim();if(/^(https?:|data:|blob:)/i.test(v))return v;if(v.startsWith('/'))v=v.slice(1);try{return await getDownloadURL(ref(storage,v));}catch(e){return null;}}
+    async function coverUrlOf(p){for(const c of candidatesOf(p)){const u=await toHttpUrl(c);if(u)return u;}return 'img/placeholder.svg';}
 
     async function render(){
       try{
-        const all=await apiListProjects({status:'approved'});
-        const q=$q?$q.value.trim():'';
-        const list=all.filter(p=>match(p,q));
-        if(!$list)return;
-        if(!list.length){
-          $list.innerHTML='<div class="muted">결과 없음</div>';
-          return;
-        }
+        const list=await apiListProjects({status:'approved',limit:8});
+        if(!list.length){$grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';return;}
         const withCovers=await Promise.all(list.map(async p=>({...p,_cover:await coverUrlOf(p)})));
-        $list.innerHTML=withCovers.map(p=>`
+        $grid.innerHTML=withCovers.map(p=>`
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
             <div class="thumb">
               <img src="${p._cover}" alt="cover"/>
               <div class="overlay">
                 <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
-                <h3>${p.projectNumber ? `PAW #${p.projectNumber} - ` : ''}${p.name??'(이름 없음)'}</h3>
+                <h3>PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h3>
                 <p class="summary">${p.summary??''}</p>
                 <div class="hover-text">자세히 보기 →</div>
               </div>
@@ -129,12 +152,8 @@
               </div>
             </div>
           </a>`).join('');
-      }catch(e){
-        console.error(e);
-        if($list)$list.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
-      }
+      }catch(e){console.error(e);$grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
     }
-    if($q)$q.addEventListener('input',render);
     render();
   </script>
 </body>
