--- a/project_list.html
+++ b/project_list.html
@@ -10,32 +10,33 @@
   <style>
     :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fff}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
-    .container{max-width:1200px;margin:0 auto;padding:0 20px}
+    .container{max-width:1280px;margin:0 auto;padding:0 20px}
     section{padding:64px 0}
-    h1{font-size:2.2rem;font-weight:900;margin-bottom:32px;color:var(--ink)}
-    #q{padding:12px 14px;border:1px solid var(--line);border-radius:12px;font-size:1rem;width:100%;max-width:360px}
+    h1{font-size:2.4rem;font-weight:900;margin-bottom:32px;color:var(--ink)}
+    #q{padding:14px 16px;border:1px solid var(--line);border-radius:12px;font-size:1rem;width:100%;max-width:420px}
 
-    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:32px;margin-top:28px}
-    .card{position:relative;display:flex;flex-direction:column;border-radius:16px;overflow:hidden;background:#fff;text-decoration:none;color:inherit;transition:.3s}
-    .card:hover{transform:translateY(-6px);box-shadow:0 10px 20px rgba(0,0,0,0.15)}
+    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(340px,1fr));gap:40px;margin-top:32px}
+    .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;background:#fff;text-decoration:none;color:inherit;transition:.3s;min-height:460px}
+    .card:hover{transform:translateY(-8px);box-shadow:0 14px 28px rgba(0,0,0,0.15)}
 
-    .thumb{position:relative;height:220px;overflow:hidden}
+    .thumb{position:relative;height:260px;overflow:hidden}
     .thumb img{width:100%;height:100%;object-fit:cover}
     .overlay{position:absolute;top:0;left:0;right:0;bottom:0;display:flex;flex-direction:column;justify-content:flex-end;
-      background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:16px}
+      background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:18px}
     .overlay .badge{align-self:flex-start;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto}
-    .overlay h3{font-size:1.3rem;font-weight:800;margin:0}
-    .overlay .summary{margin:4px 0 0;font-size:1rem;opacity:.9}
-    .overlay .hover-text{display:none;text-align:center;font-size:.95rem;font-weight:600}
+    .overlay h3{font-size:1.5rem;font-weight:800;margin:0;line-height:1.4}
+    .overlay .summary{margin:6px 0 0;font-size:1.05rem;opacity:.9}
+    .overlay .hover-text{display:none;text-align:center;font-size:1rem;font-weight:600}
     .card:hover .overlay .hover-text{display:block}
 
-    .card-body{padding:16px;background:#fff}
-    .hearts{color:var(--accent);font-weight:700;margin-bottom:6px}
-    .key-message{color:var(--accent);font-weight:600;margin:6px 0}
-    .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin:8px 0}
+    .card-body{padding:22px;background:#fff}
+    .hearts{color:var(--accent);font-weight:700;margin-bottom:8px}
+    .key-message{color:var(--ink);font-weight:600;margin:10px 0} /* 핵심문구 검정색 */
+    .progress{background:#eee;border-radius:8px;overflow:hidden;height:12px;margin:12px 0}
     .progress .bar{background:var(--accent);height:100%}
-    .stats{display:flex;justify-content:space-between;font-size:.9rem;color:var(--sub);margin-top:6px}
+    .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-top:8px}
     .stats span strong{font-weight:800;color:var(--ink);margin-left:4px}
+    .muted{color:#888}
   </style>
 </head>
 <body>
